--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ span.blue,h3{
 h1{
     padding:15px 0px 15px 35px;
 
-    background-color: #FFFFFF;
+    background-color: #ffffff;
     box-shadow: 0px 6px 10px rgb(163, 152, 152);
 }
 
@@ -61,7 +61,7 @@ padding:10px 5%;
     padding:40px;
     border-radius: 14px;
 margin:10px 15px;    
-    background-color: #FFFFFF;
+    background-color: #e3e3e3;
     cursor: pointer;
     
 
@@ -74,8 +74,23 @@ margin:10px 15px;
     width: 90%;
  }
  .textaddnewtask{
-    display: none;
+   visibility: hidden;
 }
 
-
 }
+@media screen and (min-width: 421px) and (max-width:1020px){
+   
+     .cards{
+        width: 45%;
+        height: 300px;
+    
+        border-radius: 14px;
+    margin:10px 15px;    
+        background-color: #e3e3e3;
+        cursor: pointer;
+     }
+   
+        
+        
+   
+    }
